main.css: ensure single-line spacing in home `nav`

--- a/bbguimaraes.com/main.css
+++ b/bbguimaraes.com/main.css
@@ -158,7 +158,9 @@ figcaption {
 }
 
 #home nav li {
+    margin-top: 0;
     margin-bottom: 0;
+    line-height: 1em;
 }
 
 #home nav ul {
